--- a/style.css
+++ b/style.css
@@ -2,4 +2,12 @@ html {
     height: 100%;
     width: 100%;
   }
-  
+  h1 {
+    color: green;
+  }
+  h2 {
+    color: blue;
+  }
+  #rojo {
+    color: red;
+  }
